<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupDifficuly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radioFacile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facile" />

            <RadioButton
                android:id="@+id/radioNormal"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/radioDifficile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficile" />

            <Button
                android:id="@+id/new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nouvelle_partie" />
        </LinearLayout>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>