<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/originalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/divGame"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible">

        <EditText
            android:id="@+id/inPutDiff2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/pseudo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

        <Button
            android:id="@+id/btn_Diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginTop="38dp"
            android:text="@string/jouer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inPutDiff2" />

        <SeekBar
            android:id="@+id/seekBar3"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="159dp"
            android:layout_height="57dp"
            android:layout_marginStart="126dp"
            android:layout_marginTop="14dp"
            android:max="2"
            android:progress="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="53dp"
            android:text="@string/difficulte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/displayScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/divGame"
        app:layout_constraintTop_toTopOf="@+id/divGame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facile"
                android:textAlignment="center" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ezcontainer">

                <LinearLayout
                    android:id="@+id/afficheEz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textAlignment="center" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/medcontainer">

                <LinearLayout
                    android:id="@+id/afficheMed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficile"
                android:textAlignment="center" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/afficheHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hardcontainer"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/scores"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/btn_Jouer" />

    <SeekBar
        android:id="@+id/divScores"
        android:layout_width="157dp"
        android:layout_height="26dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="120dp"
        android:max="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="120dp"
        android:text="@string/nouvelle_partie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="109dp"
        android:layout_height="35dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="16dp"
        android:text="@string/demineur"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Jouer"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="11dp"
        android:text="@string/tuto"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>