<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_frag_scoreTitle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_score_des_joueurs"
            android:textAlignment="center"
            android:textSize="45sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title_scores">

            <TextView
                android:id="@+id/nom_joueur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_joueur"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/row_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>